[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/tear_box.png" type="Texture" id=2]
[ext_resource path="res://Assets/fusion_background.png" type="Texture" id=3]
[ext_resource path="res://Scenes/BoxOpeningSide.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.716
height = 172.244

[sub_resource type="CircleShape2D" id=1]
radius = 16.1245

[sub_resource type="CapsuleShape2D" id=5]
radius = 2.0
height = 46.0

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 20, 90, 20 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
color = Color( 0.627451, 0.435294, 0.305882, 1 )

[node name="boxOpeningSide" type="Node"]

[node name="FusionBackground" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="TearBox" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -157.0
margin_top = -429.0
margin_right = 174.0
margin_bottom = -73.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true

[node name="Node2D" type="Node2D" parent="TearBox"]
position = Vector2( -355, -171 )
script = ExtResource( 4 )

[node name="upGood" type="Area2D" parent="TearBox/Node2D"]
position = Vector2( 1040, 630 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TearBox/Node2D/upGood"]
position = Vector2( -432, -299 )
rotation = 1.09956
shape = SubResource( 2 )

[node name="endPoint" type="Area2D" parent="TearBox/Node2D"]
position = Vector2( 1046, 629 )

[node name="endPoint2d" type="CollisionShape2D" parent="TearBox/Node2D/endPoint"]
position = Vector2( -362, -335 )
shape = SubResource( 1 )

[node name="startingPoint2" type="Area2D" parent="TearBox/Node2D"]
position = Vector2( 519, 316 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TearBox/Node2D/startingPoint2"]
position = Vector2( 12, 52 )
shape = SubResource( 1 )

[node name="firstOpenUpdate" type="Area2D" parent="TearBox/Node2D"]
position = Vector2( 686, 419 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TearBox/Node2D/firstOpenUpdate"]
position = Vector2( -112, -71 )
rotation = -0.610865
shape = SubResource( 5 )

[node name="Particles2D" type="Particles2D" parent="TearBox/Node2D"]
position = Vector2( 527, 338 )
emitting = false
process_material = SubResource( 4 )

[node name="thirdOpenUpdate" type="Area2D" parent="TearBox/Node2D"]
position = Vector2( 2744, 1676 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TearBox/Node2D/thirdOpenUpdate"]
position = Vector2( -2070, -1376 )
rotation = -0.610865
shape = SubResource( 5 )

[node name="secondOpenUpdate" type="Area2D" parent="TearBox/Node2D"]
position = Vector2( 1372, 838 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TearBox/Node2D/secondOpenUpdate"]
position = Vector2( -742, -519 )
rotation = -0.610865
shape = SubResource( 5 )

[connection signal="mouse_exited" from="TearBox/Node2D/upGood" to="TearBox/Node2D" method="_on_upGood_mouse_exited"]
[connection signal="input_event" from="TearBox/Node2D/endPoint" to="TearBox/Node2D" method="_on_endPoint_input_event"]
[connection signal="input_event" from="TearBox/Node2D/startingPoint2" to="TearBox/Node2D" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="TearBox/Node2D/firstOpenUpdate" to="TearBox/Node2D" method="_on_firstOpenUpdate_mouse_entered"]
[connection signal="mouse_entered" from="TearBox/Node2D/thirdOpenUpdate" to="TearBox/Node2D" method="_on_thirdOpenUpdate_mouse_entered"]
[connection signal="mouse_entered" from="TearBox/Node2D/secondOpenUpdate" to="TearBox/Node2D" method="_on_secondOpenUpdate_mouse_entered"]
